welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: value tolnt is not a member of String
	decalage = litMessage().tolnt
                                ^